@@ -2,23 +2,22 @@ package ru.job4j.collection;
 
 import org.junit.Test;
 
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 
-import static org.hamcrest.core.Is.is;
-import static org.junit.Assert.*;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.MatcherAssert.assertThat;
 
 public class NotifyAccountTest {
 
     @Test
     public void whenPutDifferentThenGetBoth() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("1234 567810", "Svetlana Kaptsova", "eDer3432f"),
                 new Account("1234 781011", "Svetlana Kaptsova", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("1234 567810", "Svetlana Kaptsova", "eDer3432f"),
                         new Account("1234 781011", "Svetlana Kaptsova", "000001")
                 )
@@ -28,13 +27,13 @@ public class NotifyAccountTest {
 
     @Test
     public void whenPutTheSameThenGetOnlyOne() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("1234 567810", "Svetlana Kaptsova", "eDer3432f"),
                 new Account("1234 567810", "Svetlana Kaptsova", "eDer3432f"),
                 new Account("1234 781011", "Svetlana Kaptsova", "000001")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                List.of(
                         new Account("1234 567810", "Svetlana Kaptsova", "eDer3432f"),
                         new Account("1234 781011", "Svetlana Kaptsova", "000001")
                 )
